# libtorch_centernet

./: CMakeLists.txt  example-app.cpp
